--- a/src/css/ams-overrides.css
+++ b/src/css/ams-overrides.css
@@ -8,7 +8,7 @@
   padding: 0 !important
 }
 
-[data-theme='dark'] .ams-screen {
+[data-theme='dark'] .ams-page {
   background-color: transparent;
 }
 
@@ -30,8 +30,19 @@
   filter: invert(1) hue-rotate(180deg) brightness(1.2);
 }
 
-[data-theme='dark'] .ams-card__link {
+[data-theme='dark'] .ams-card__link,
+[data-theme='dark'] .ams-heading,
+[data-theme='dark'] .ams-page-header__brand-name,
+[data-theme='dark'] .ams-page-header__menu-link {
   color: #fff;
+}
+
+[data-theme='dark'] .ams-page-header__menu-link:hover {
+  color: #fff;
+}
+
+[data-theme='dark'] .ams-page-header__menu-link {
+  color: var(--ifm-link-color);
 }
 
 [data-theme='dark'] .ams-card__link:hover {
@@ -51,7 +62,8 @@
 }
 
 [data-theme='dark'] .ams-button--primary {
-  background-color: #FFFFFF;
+  background-color: #fff;
+  border-color: #fff;
   box-shadow: none;
   text-decoration: none !important;
   color: #000000 !important;;
@@ -59,6 +71,7 @@
 }
 
 [data-theme='dark'] .ams-button--primary:hover {
-  background-color: #E8E8E8 !important;
+  background-color: #e8e8e8 !important;
+  border-color: #e8e8e8 !important;
   box-shadow: none !important;
 }
