--- a/src/css/doc-overrides.css
+++ b/src/css/doc-overrides.css
@@ -19,3 +19,8 @@ a {
     }
   }
 }
+
+.theme-doc-footer-edit-meta-row {
+  margin-left: 0;
+  margin-right: 0;
+}
